--- a/InterbikesEcommerce/InterbikesWeb/Views/Shared/_Layout.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Categorias</a>
                         </li>
                     </ul>
                 </div>
