--- a/InterbikesEcommerce/InterbikesWeb/Views/Category/Index.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Views/Category/Index.cshtml
@@ -1,24 +1,39 @@
 ﻿@model List<Category>
 
-<h1>Category List</h1>
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>
-                Categoria
-            </th>
-            <th>
-                Display
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach(var obj in Model.OrderBy(u => u.DisplayOrder))
-        {
+<div class="container">
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2 class="text-primary">
+                Categorias
+            </h2>
+        </div>
+        <div class="col-6 text-end">
+            <a asp-controller="" asp-action="" class="btn btn-primary">
+            <i class="bi bi-plus-circle m-1"></i> Nova Categoria
+            </a>
+        </div>
+    </div>
+
+    <table class="table table-bordered table-striped">
+        <thead>
             <tr>
-                <td>@obj.Name</td>
-                <td>@obj.DisplayOrder</td>
+                <th>
+                    Categoria
+                </th>
+                <th>
+                    Display
+                </th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var obj in Model.OrderBy(u => u.DisplayOrder))
+            {
+                <tr>
+                    <td>@obj.Name</td>
+                    <td>@obj.DisplayOrder</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
