--- a/InterbikesEcommerce/InterbikesWeb/Views/Category/Create.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Views/Category/Create.cshtml
@@ -8,7 +8,7 @@
         </div>
         <div class="mb-3">
             <label asp-for="Name" class="p-0"></label>
-            <input tasp-for="Name" class="form-control" />
+            <input asp-for="Name" class="form-control" />
         </div>
         <div class="mb-3">
             <label asp-for="DisplayOrder" class="p-0"></label>
