style: changed the color of the auxiliar title to red

--- a/InterbikesEcommerce/InterbikesWeb/Views/Category/Delete.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Views/Category/Delete.cshtml
@@ -4,8 +4,8 @@
     <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Deletar Categoria</h2>
-            <h3>Deseja realmente deletar essa categoria?</h3>
+            <h2 class="text-primary p-0">Deletar Categoria</h2>
+            <h5 class="text-danger">Deseja realmente deletar essa categoria?</h5>
             <hr />
         </div>
         <div class="mb-3">
