--- a/InterbikesEcommerce/InterbikesWeb/Views/Category/Delete.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Views/Category/Delete.cshtml
@@ -4,7 +4,7 @@
     <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary p-0">Deletar Categoria</h2>
+            <h2 class="text-primary">Deletar Categoria</h2>
             <h5 class="text-danger">Deseja realmente deletar essa categoria?</h5>
             <hr />
         </div>
