--- a/InterbikesEcommerce/InterbikesWeb/Views/Category/Index.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Views/Category/Index.cshtml
@@ -35,10 +35,10 @@
                     <td>
                         <div class="w-75 btn-group" role="group">
                             <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                                <i class="bi bi-pencil-square"></i> Edit
+                                <i class="bi bi-pencil-square"></i> Editar
                             </a>
                             <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                                <i class="bi bi-trash-fill"></i> Delete
+                                <i class="bi bi-trash-fill"></i> Deletar
                             </a>
                         </div>
                     </td>
