--- a/InterbikesEcommerce/InterbikesWeb/Views/Shared/_Layout.cshtml.css
+++ b/InterbikesEcommerce/InterbikesWeb/Views/Shared/_Layout.cshtml.css
@@ -7,9 +7,9 @@ a.navbar-brand {
   word-break: break-all;
 }
 
-a {
+/*a {
   color: #0077cc;
-}
+}*/
 
 .btn-primary {
   color: #fff;
@@ -32,6 +32,20 @@ a {
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+/* Estilizando o dropdown */
+.dropdown-menu {
+    background-color: #2c3e50; /* Cor de fundo do dropdown */
+}
+
+.dropdown-item {
+    color: #fff; /* Cor do texto do dropdown */
+}
+
+.dropdown-item:hover {
+    background-color: #fff; /* Cor de fundo do dropdown ao passar o mouse */
+    color: #2c3e50; /* Cor do texto do dropdown ao passar o mouse */
 }
 
 button.accept-policy {
