--- a/InterbikesEcommerce/InterbikesWeb/Views/Shared/_Layout.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Categorias</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="" asp-action="">Another action</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Produtos</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
