--- a/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/Product/Edit.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/Product/Edit.cshtml
@@ -25,7 +25,7 @@
 
             <div class="mb-3">
                 <label asp-for="Description" class="p-0"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
 
