--- a/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -30,7 +30,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var obj in Model.OrderBy(u => u.Name))
+            @foreach (var obj in Model)
             {
                 <tr>
                     <td>@obj.Name</td>
