--- a/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/_ViewImports.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using InterbikesWeb
 @using Interbikes.Models;
+@using Interbikes.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
