--- a/InterbikesEcommerce/InterbikesWeb/Views/Shared/_Layout.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.tiny.cloud/1/vz3or542vx2nqu6ctakq36j1otl4uf5kiyc25khx0kc6wahk/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
