feat: adding File Upload in the ProductsController

--- a/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/Product/Create.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/Product/Create.cshtml
@@ -39,7 +39,7 @@
 
         <div class="mb-3">
             <label asp-for="Product.ImageUrl" class="p-0"></label>
-                <input type="file" class="form-control" />
+                <input type="file" name="file" class="form-control" />
         </div>
 
 
