feat: Display Image on Update

--- a/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/Product/Edit.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/Product/Edit.cshtml
@@ -6,40 +6,50 @@
             <h2 class="text-primary">Editar Produto</h2>
             <hr />
         </div>
-        <div class="mb-3">
-            <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
 
-        <div class="mb-3">
-            <label asp-for="Price" class="p-0"></label>
-            <div class="form-group">
-                <div class="input-group mb-3">
-                    <span class="input-group-text">R$</span>
-                    <input asp-for="Price" class="form-control" />
-                    <span class="input-group-text">,00</span>
+       <div class="row">
+            <div class="col-2">
+                <img src="@Model.ImageUrl" width="100%"
+                     style="border-radius:5px; border:1px solid #bbb9b9" />
+            </div>
+
+           <div class="col-10">
+                <div class="mb-3">
+                    <label asp-for="Name" class="p-0"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
 
-            <div class="mb-3">
-                <label asp-for="Description" class="p-0"></label>
-                <textarea asp-for="Description" class="form-control"></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
+                <div class="mb-3">
+                    <label asp-for="Price" class="p-0"></label>
+                    <div class="form-group">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">R$</span>
+                            <input asp-for="Price" class="form-control" />
+                            <span class="input-group-text">,00</span>
+                        </div>
+                        <span asp-validation-for="Price" class="text-danger"></span>
+                    </div>
 
-        <div class="row">
-            <div class="col-6 col-md-6">
-                <button type="submit" class="btn btn-primary form-control">Editar</button>
-            </div>
-            <div class="col-6 col-md-6">
-                <a asp-controller="Product" asp-action="Index" class="btn btn-secondary border form-control">
-                    Voltar
-                </a>
-            </div>
-        </div>
-    </div>
+                    <div class="mb-3">
+                        <label asp-for="Description" class="p-0"></label>
+                        <textarea asp-for="Description" class="form-control"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-6 col-md-6">
+                            <button type="submit" class="btn btn-primary form-control">Editar</button>
+                        </div>
+                        <div class="col-6 col-md-6">
+                            <a asp-controller="Product" asp-action="Index" class="btn btn-secondary border form-control">
+                                Voltar
+                            </a>
+                        </div>
+                    </div>
+                </div>
+           </div>
+       </div>
 </form>
 
 @section Scripts {
