--- a/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/Product/Edit.cshtml
+++ b/InterbikesEcommerce/InterbikesWeb/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Product
+﻿@model ProductVM
 
 <form method="post">
     <div class="border p-3 mt-4">
@@ -9,32 +9,45 @@
 
        <div class="row">
             <div class="col-2">
-                <img src="@Model.ImageUrl" width="100%"
+                <img src="@Model.Product.ImageUrl" width="100%"
                      style="border-radius:5px; border:1px solid #bbb9b9" />
             </div>
 
            <div class="col-10">
                 <div class="mb-3">
-                    <label asp-for="Name" class="p-0"></label>
-                    <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
+                    <label asp-for="Product.Name" class="p-0"></label>
+                    <input asp-for="Product.Name" class="form-control" />
+                    <span asp-validation-for="Product.Name" class="text-danger"></span>
                 </div>
 
                 <div class="mb-3">
-                    <label asp-for="Price" class="p-0"></label>
+                    <label asp-for="Product.Price" class="p-0"></label>
                     <div class="form-group">
                         <div class="input-group mb-3">
                             <span class="input-group-text">R$</span>
-                            <input asp-for="Price" class="form-control" />
+                            <input asp-for="Product.Price" class="form-control" />
                             <span class="input-group-text">,00</span>
                         </div>
-                        <span asp-validation-for="Price" class="text-danger"></span>
+                        <span asp-validation-for="Product.Price" class="text-danger"></span>
                     </div>
 
                     <div class="mb-3">
-                        <label asp-for="Description" class="p-0"></label>
-                        <textarea asp-for="Description" class="form-control"></textarea>
-                        <span asp-validation-for="Description" class="text-danger"></span>
+                        <label asp-for="Product.CategoryId" class="p-0"></label>
+                        <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select">
+                            <option disabled selected>--Selecione a Categoria--</option>
+                        </select>
+                        <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <label asp-for="Product.Description" class="p-0"></label>
+                        <textarea asp-for="Product.Description" class="form-control text-muted"></textarea>
+                        <span asp-validation-for="Product.Description" class="text-danger"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <label asp-for="Product.ImageUrl" class="p-0"></label>
+                        <input type="file" name="file" class="form-control" />
                     </div>
 
                     <div class="row">
@@ -53,6 +66,20 @@
 </form>
 
 @section Scripts {
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'anchor autolink charmap codesample emoticons lists table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage advtemplate ai mentions tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss markdown',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent',
+            tinycomments_mode: 'embedded',
+            tinycomments_author: 'Author name',
+            mergetags_list: [
+                { value: 'First.Name', title: 'First Name' },
+                { value: 'Email', title: 'Email' },
+            ],
+            ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant")),
+        });
+    </script>
     @{
         <partial name="_ValidationScriptsPartial" />
     }
